--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           ></textarea>
         </div>
         <div class="card-footer">
-          <button id="generate" class="btn">Generate Password</button>
+          <button id="generate" class="btn" disabled >Generate Password</button>
           <button id="copy" class="btn copyBtn" disabled>Copy to Clipboard</button>
         </div>
       </div>
